%% Mermaid ER diagram for core prototype tables
erDiagram
  AUTH_USERS ||--o{ JOBS : owns
  JOBS ||--o{ JOB_EVENTS : generates
  DB_HOSTS ||--o{ JOBS : targets
  LOCKS ||--o{ JOBS : guards
  SETTINGS ||--o{ JOBS : config

  AUTH_USERS {
    char36 user_id PK
    varchar255 username
    char6 user_code
    bool is_admin
    timestamp6 created_at
    timestamp6 disabled_at
  }

  JOBS {
    char36 id PK
    char36 owner_user_id FK
    varchar255 owner_username
    char6 owner_user_code
    varchar255 target
    varchar64 staging_name
    varchar255 dbhost
    enum status
    timestamp6 submitted_at
    timestamp6 started_at
    timestamp6 completed_at
    json options_json
    int retry_count
    text error_detail
    varchar520 active_target_key "GENERATED VIRTUAL"
  }

  JOB_EVENTS {
    bigint id PK
    char36 job_id FK
    varchar50 event_type
    text detail
    timestamp6 logged_at
  }

  DB_HOSTS {
    int id PK
    varchar255 hostname UK
    varchar512 connection_string
    int max_concurrent_restores
    bool enabled
    timestamp6 created_at
  }

  LOCKS {
    varchar100 lock_name PK
    varchar255 locked_by
    timestamp6 locked_at
    timestamp6 expires_at
  }

  SETTINGS {
    varchar100 setting_key PK
    text setting_value
    text description
    timestamp6 updated_at
  }
